FIX : scrollbar for small devices

--- a/style.css
+++ b/style.css
@@ -188,33 +188,7 @@ main {
   border: 1px solid var(--text-head);
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-  opacity: 0.7;
-}
 
-::-webkit-scrollbar-track {
-  background: var(--primary-1);
-}
-
-::-webkit-scrollbar-thumb {
-  background: var(--primary-3);
-  border-radius: 0.1rem;
-}
-
-::-moz-scrollbar {
-  width: 10px;
-  opacity: 0.7;
-}
-
-::-moz-scrollbar-track {
-  background: var(--primary-1);
-}
-
-::-moz-scrollbar-thumb {
-  background: var(--primary-3);
-  border-radius: 0.1rem;
-}
 
 .theme-icon {
   color: var(--primary-3);
@@ -317,6 +291,7 @@ main {
   border-radius: 0.3rem;
   transition: all 0.1s ease-in-out;
 }
+
 .btn:hover {
   opacity: 0.8;
   background: var(--text-head) !important;
@@ -353,5 +328,35 @@ main {
     letter-spacing: -2px;
     margin-top: 3rem;
     margin-bottom: 1.5rem;
+  }
+}
+
+@media (min-width:800px) {
+  ::-webkit-scrollbar {
+    width: 10px;
+    opacity: 0.7;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: var(--primary-1);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: var(--primary-3);
+    border-radius: 0.1rem;
+  }
+
+  ::-moz-scrollbar {
+    width: 10px;
+    opacity: 0.7;
+  }
+
+  ::-moz-scrollbar-track {
+    background: var(--primary-1);
+  }
+
+  ::-moz-scrollbar-thumb {
+    background: var(--primary-3);
+    border-radius: 0.1rem;
   }
 }
